--- a/src/container/about/About.css
+++ b/src/container/about/About.css
@@ -1,3 +1,87 @@
 .about{
     height: 100vh;
+    padding-top: 12rem;
+    display: flex;
+    background: linear-gradient(135deg, #FFF5E1, #FDEFEF);
+}
+
+.about__leftSection{
+    margin-top: 6rem;
+    width: 40%;
+    margin-left: 15%;
+    display: flex;
+    flex-direction: column;
+}
+
+.about__leftSection p:nth-child(1){
+    font-size: 7rem;
+    color: #D81B60; /* Keep the pink, but ensure it's dark enough */
+
+    margin-bottom: 1rem;
+}
+
+.about__leftSection p:nth-child(2){
+    font-size: 7rem;
+    color: #71072b;
+    margin-bottom: 4rem;
+}
+
+.about__leftSection p:nth-child(3){
+    font-size: 1.6rem;
+    line-height: 2.2rem;
+    letter-spacing: 0.8px;
+    color: black;
+    font-family:'Open Sans', sans-serif;
+    width: 60%;
+    margin-bottom: 6rem;
+}
+
+
+.about__leftSection a{
+
+    font-size: 1.6rem;
+    font-weight: 600;
+    color: white;
+    width: 30rem;
+    height: 7rem;
+    letter-spacing: 3px;
+
+    background: linear-gradient(to bottom, #FF4081, #99264D);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 1.4rem;
+    
+}
+
+.about__rightSection{
+    display: flex;
+    flex-direction: column;
+    margin-top: 8rem;
+    row-gap: 1.5rem;
+
+    height: 445px;
+
+    padding: 2rem;
+    background-color: rgba(218, 165, 32, 0.4);
+    border-radius: 15px;
+
+}
+
+.about__images{
+    display: flex;
+    flex-direction: row;
+    gap: 1.5rem;
+   
+}
+
+.about__images img{
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
+
+    border-radius: 15px;
+    
+    border: 3px solid #F5E6D3; /* Light border matching the color theme */
+    box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.1); /* Soft shadow for depth */
 }
