--- a/src/container/main2/Main2.css
+++ b/src/container/main2/Main2.css
@@ -8,9 +8,6 @@
 
  }
 
-
-
-
 .main__topSection{
     width: 100%;
     display: flex;
@@ -31,7 +28,7 @@
     }
 
 .main__header{
-    width: 70%;
+    width: 80%;
 
 }
 
@@ -44,7 +41,9 @@
     letter-spacing: 2px;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     color: #802A2A;   
+    margin-left: 4%;
 }
 
 .main__navLinks{    
@@ -57,10 +56,16 @@
     justify-content: center;
 }
 
+.main__search{
+    height: 2.5rem;
+    width: 2.5rem;    
+    fill: #802A2A;
+    margin-left: 10%;
+}
+
 
 .main__midSection{
     position: relative;
-
     display: flex;
     width: 100%;
     height: 100vh;
@@ -84,7 +89,7 @@
 .main__midSection-left img{
     position: absolute;
     left: -15%;
-    top: 30%;
+    top: 27%;
     height: 30rem;   
     width: 30rem;
     margin-left: 30%;
@@ -94,7 +99,7 @@
 .main__midSection-right {
     position: absolute;
     left: 40%;
-    top: 25%;
+    top: 30%;
     z-index: 15;
 
     display: flex;
