--- a/src/container/products/Products.css
+++ b/src/container/products/Products.css
@@ -1,4 +1,8 @@
 .products{
     height: 100vh;
-    width: 100%;
-}
+    
+    padding-top: 12rem;
+    display: flex;
+    background: linear-gradient(135deg, #FFF5E1, #FDEFEF);
+    
+    }
