product section updated

--- a/src/container/products/Products.css
+++ b/src/container/products/Products.css
@@ -1,8 +1,94 @@
 .products{
     height: 100vh;
+    display: flex;
+    flex-direction: column;
     
-    padding-top: 12rem;
     display: flex;
     background: linear-gradient(135deg, #FFF5E1, #FDEFEF);
+
+    font-family: Inter;
+    font-weight: 400;
     
     }
+
+.products__topSection{
+    display: flex;
+    justify-content: center;
+    font-size: 3rem;
+    font-weight: 600;
+    margin-bottom: 4rem;
+    color: #cd0951;
+}
+
+.products__topSection p{
+    margin-top: 12rem;
+}
+.products__bottomSection{
+    display: flex;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.products__bottomSection-left{
+   width: 25%;
+   padding-left: 10%;
+}
+
+.products__bottomSection-left :nth-child(1){
+  padding-bottom: 2.5rem;
+ }
+
+ .products__bottomSection-left h3{
+    
+    font-family: Inter;
+    font-weight: 400;
+    padding: 1rem;
+    cursor: pointer;
+ }
+
+ .products__allProducts, .products__cakes, .products__specialOccasions{
+    cursor: pointer;
+ }
+
+ .products__bottomSection-right{
+    width: 65%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 3rem;
+    align-items: center;
+    justify-items: center;
+    font-size: 1rem;
+ }
+
+ .products__bottomSection-grid{
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 10px;
+ }
+
+
+ .products__bottomSection-grid img{
+    height: 180px;
+    width: 180px;
+    object-fit: cover;
+    margin: 10px;
+
+    border-radius: 15px;
+    
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Adjust values for desired shadow */
+}
+
+.products__bottomSection-grid p:nth-child(2){
+    font-size: 1.5rem;
+    padding-left: 10px; 
+    color: black;
+}
+
+.products__bottomSection-grid div{
+    display: flex;
+    justify-content: space-around;
+    font-size: 1.5rem;
+ 
+ }
