--- a/src/container/main2/Main2.css
+++ b/src/container/main2/Main2.css
@@ -3,7 +3,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
     position: relative;
 
  }
@@ -23,8 +22,10 @@
         rgba(245, 230, 211, 0.8) 50%, 
         rgba(232, 214, 181, 0.4) 85%, 
         rgba(255, 245, 230, 0) 100% 
-    )
+    );
     
+
+    z-index: 5;
     }
 
 .main__header{
@@ -70,6 +71,7 @@
     border-radius: 5px;
     background-color: oldlace;
 
+
 }
 
 
@@ -102,7 +104,8 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    z-index: -4;
+    z-index: 0;
+
 
 }
 
@@ -113,7 +116,7 @@
     height: 30rem;   
     width: 30rem;
     margin-left: 30%;
-    z-index: 15;
+    z-index: 1;
 }
 
 .main__midSection-right {
@@ -153,12 +156,13 @@
     
 }
 
+  
+
 @media (min-width:1600px){
     .main::after{
         height: 9.1rem;
       
     }
-
 
 }
 
